# bevy_vox_scene

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
assets/: cloud.vox  deer.vox  study.vox  test.vox
examples/: animation-generation.rs  animation-scene.rs  animation.rs  basic-model.rs  cloud-generation.rs  cloud-scene.rs  emissive-model.rs  modify-scene.rs  modify-voxels.rs  picking.rs  recentering-model.rs  scene-slice.rs  ssao-model.rs  transmission-scene.rs  voxel-collisions.rs  voxel-generation.rs
src/: hook.rs  lib.rs  loader.rs  mesh.rs  observers.rs  scene.rs  systems.rs  tests.rs  voxel.rs  voxel_scene.rs
src/load/: components.rs  mesh.rs  mod.rs  parse.rs  parse_model.rs  parse_scene.rs  voxel.rs
src/model/: cloud.rs  data.rs  mesh.rs  mod.rs  modify.rs  palette.rs  queryable.rs  sdf.rs  voxel.rs
src/scene/: hook.rs  mod.rs  modify.rs  parse.rs  queryable.rs  systems.rs  tests.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
