[package]
name = "bevy_vox_scene"
description = "A Bevy engine plugin for loading Magica Voxel world files and render materials directly in Bevy as a scene graph."
keywords = ["bevy", "voxel", "Magica-Voxel"]
categories = ["game-development", "graphics", "rendering", "rendering::data-formats"]
license = "MIT"
version = "0.13.0"
repository = "https://github.com/Utsira/bevy_vox_scene"
authors = ["Oliver Dew <olidew@gmail.com>"]
edition = "2021"
readme = "README.md"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["modify_voxels", "generate_voxels"]
modify_voxels = []
generate_voxels = []

[[example]]
name = "modify-voxels"
required-features = ["modify_voxels"]

[[example]]
name = "voxel-collisions"
required-features = ["modify_voxels"]

[[example]]
name = "voxel-generation"
required-features = ["generate_voxels"]

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
  "bevy_render",
  "bevy_asset",
  "bevy_pbr",
  "pbr_transmission_textures",
] }
dot_vox = "5.1.1"
ndshape = "0.3.0"
block-mesh = "0.2.0"
ndcopy = "0.3.0"
anyhow = "1.0.38"
thiserror = "1.0.50"
serde = "1.0.193"

[dev-dependencies]
bevy = "0.13.0"
bevy_panorbit_camera = "0.14.0"
rand = "0.8.5"
async-std = { version = "1.12.0", features = ["attributes"] }
